# mcp-point-reader

./: LICENSE  README.md
mcp-point-reader/: README.md  README_CH.md  pyproject.toml  server.py
mcp-point-reader/mcp_point_reader/: __init__.py  capture.py  config.py  db.py  tools.py  tts.py
mcp-point-reader/mcp_point_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
