[project]
name = "mcp-point-reader"
version = "0.1.0"
description = "MCP plugin for 点读助手 - screenshot OCR, TTS, vocabulary & history management"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "PyQt5>=5.15",
    "edge-tts>=6.1.0",
    "pyttsx3>=2.90",
    "pyperclip>=1.8.2",
    "pygame>=2.5.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "pynput>=1.7.6",
]

[project.scripts]
mcp-point-reader = "server:main"
